Pre-release - work in progress
    - Added pyqpp, a Python wrapper around Quantum++. See
      https://github.com/softwareQinc/qpp/wiki/8.-pyqpp for more details.
    - Minor update of Shor's algorithm example ["examples/shor.cpp"]
    - Renamed ["examples/qasm/qasm.cpp"] to ["examples/qasm/qpp_qasm.cpp"]

Version 3.0 - 5 October 2021
    - Major release, bumped up C++ standard to C++17
    - Decoupled the OpenQASM parser from the main codebase. A hard copy of
      qasmtools (https://github.com/softwareQinc/qasmtools) is now common to
      both staq and Quantum++, and by default uses standard OpenQASM 2.0 gate
      definitions. To switch to Qiskit definitions (which are also the usual
      ones used in QC textbooks), configure the project with
      `cmake -DUSE_QISKIT_SPECS=ON`.
    - Refactored qpp::internal::Singleton ["internal/classes/singleton.hpp"]
      so that qpp::internal::Singleton::get_instance() returns a thread local
      instance whenever the compiler supports thread_local. For more
      fine-grained control, one can use
          qpp::internal::Singleton::get_no_thread_local_instance()
          qpp::internal::Singleton::get_thread_local_instance()
    - Added qpp::schmidt() ["entanglement.hpp"] and improved the performance
      of singular value decomposition, thanks @antoine-bussy
      (https://github.com/antoine-bussy)

Version 2.7 - 1 August 2021
    - Added installation support and auto package detection via CMake
      find_package(qpp REQUIRED)
    - Simplified installation instructions ["INSTALL.md"]
    - Added an almost complete BB84 example ["examples/bb84.cpp"], does not
      include error correction and privacy amplification
    - Added CircleCI continuous integration
    - CMake minimum required version bumped to 3.12 for automatic unit tests
      detection by CMake and other CMake-related "good practices"
    - Unit testing and examples are now separate CMake targets, one needs to