@@ -106,9 +106,9 @@ TEST(qpp_qasm_read_from_file, MappedGates) {
     ket psi1 = engine.get_psi();
 
     // Reference state
-    ket psi2 = USE_QISKIT_SPECS
-                   ? kron(gt.H * 0_ket, gt.H * 0_ket)
-                   : kron(gt.H * 0_ket * (-1_i), gt.H * 0_ket * (-1_i));
+    ket psi2 = USE_OPENQASM2_SPECS
+                   ? kron(gt.H * 0_ket * (-1_i), gt.H * 0_ket * (-1_i))
+                   : kron(gt.H * 0_ket, gt.H * 0_ket);
 
     // Check norm
     EXPECT_NEAR(0, norm(psi1 - psi2), 1e-7);
@@ -128,7 +128,7 @@ TEST(qpp_qasm_read_from_file, NonDestrMeas) {
     ket psi = engine.get_psi();
 
     // Reference state
-    ket mres = USE_QISKIT_SPECS ? mket({res}) : mket({res}) * (-1_i);
+    ket mres = USE_OPENQASM2_SPECS ? mket({res}) * (-1_i) : mket({res});
 
     // Check norm
     EXPECT_NEAR(0, norm(psi - mres), 1e-7);
@@ -144,7 +144,7 @@ TEST(qpp_qasm_read_from_file, Reset) {
     ket psi = engine.get_psi();
 
     // Reference state
-    ket psi2 = USE_QISKIT_SPECS ? 0_ket : 0_ket * (-1_i);
+    ket psi2 = USE_OPENQASM2_SPECS ? 0_ket * (-1_i) : 0_ket;
 
     // Check norm
     EXPECT_NEAR(0, norm(psi - psi2), 1e-7);
