@@ -3,6 +3,10 @@ Pre-release - work in progress
       https://github.com/softwareQinc/qpp/wiki/8.-pyqpp for more details.
     - Minor update of Shor's algorithm example ["examples/shor.cpp"]
     - Renamed ["examples/qasm/qasm.cpp"] to ["examples/qasm/qpp_qasm.cpp"]
+    - Due to phase discrepancies, by default the parser now uses Qiskit
+      definitions (which are also the usual ones used in QC textbooks). To
+      switch to standard OpenQASM 2.0 gate definitions, configure the project
+      with `cmake -DUSE_OPENQASM2_SPECS=ON`.
 
 Version 3.0 - 5 October 2021
     - Major release, bumped up C++ standard to C++17
